testdata/ttcn3-conformance-tests/ATS/core_language/07_expressions/0701_operators/070103_relational_operators/NegSem_070103_RelationalOperators_005.ttcn
/*****************************************************************
 ** @author   STF 487
 ** @version  0.0.1
 ** @purpose  1:7.1.3, Ensure that the not equal to operator on address can not be evaluated if value is uninitialized.
 ** @verdict  pass reject
 *****************************************************************/

module NegSem_070103_RelationalOperators_005 {

type component GeneralComp {
}

type integer address;

testcase TC_NegSem_070103_RelationalOperators_005() runs on GeneralComp {

    var address My_address;    //uninitialized address type value


	if (My_address != null) //error
    {
		setverdict(pass, My_address);
	} else {
		setverdict(fail,My_address);
	}
}

control{
    execute(TC_NegSem_070103_RelationalOperators_005());
}

}
